--- a/public/assets/scss/_header.scss
+++ b/public/assets/scss/_header.scss
@@ -293,7 +293,7 @@
 					content: "";
 					right: -65px;
 					position: absolute;
-					border-bottom: 80px solid #ea1e00;
+					border-bottom: 80px solid #ffaa05;
 					border-right: 65px solid transparent;
 				}
 				&:after {
