--- a/public/assets/scss/_new-home.scss
+++ b/public/assets/scss/_new-home.scss
@@ -70,7 +70,7 @@ h6{
 .sec-title .title{
 	position:relative;
 	font-size:20px;
-	color:#ec0000;
+	color:#ffaa05;
 	line-height:1.5em;
 	font-weight:700;
 	display:block;
@@ -143,7 +143,7 @@ h6{
 }
 
 .theme_color{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .auto-container{
@@ -174,7 +174,7 @@ ul li {
 	font-weight:700;
 	border-radius:7px;
 	display:inline-block;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 	padding:12px 20px 12px 25px;
 	transition:all 0.3s ease;
 	-moz-transition:all 0.3s ease;
@@ -193,7 +193,7 @@ ul li {
 	margin-left:10px;
 	text-align:center;
 	border-radius:50px;
-	background-color:#a20000;
+	background-color:#cc8800;
 	transition:all 0.3s ease;
 	-moz-transition:all 0.3s ease;
 	-webkit-transition:all 0.3s ease;
@@ -208,7 +208,7 @@ ul li {
 
 .btn-style-one:hover .icon{
 	color:#ffffff;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 /* Btn Stule Two */
@@ -249,11 +249,11 @@ ul li {
 
 .btn-style-two:hover{
 	color:#ffffff !important;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .btn-style-two:hover .icon{
-	color:#ec0000;
+	color:#ffaa05;
 	background-color:#ffffff;
 }
 
@@ -295,11 +295,11 @@ ul li {
 
 .btn-style-three:hover{
 	color:#ffffff !important;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .btn-style-three:hover .icon{
-	color:#ec0000;
+	color:#ffaa05;
 	background-color:#ffffff;
 }
 
@@ -379,7 +379,7 @@ ul li {
 }
 
 .ft1-header-top .ft1-top-left .top-list li a:hover{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .ft1-main-header .ft1-header-top .ft1-top-right{
@@ -422,7 +422,7 @@ ul li {
 	background-color:#222222;
 	border:none;
 	padding:0px;
-    border-top:3px solid #ec0000;
+    border-top:3px solid #ffaa05;
 }
 
 .ft1-main-header .ft1-header-top .language > a{
@@ -481,7 +481,7 @@ ul li {
 
 .ft1-main-header .ft1-header-top .language .dropdown-menu > li > a:hover{
 	color:#ffffff !important;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-main-header .main-box{
@@ -783,7 +783,7 @@ ul li {
 	left:10px;
 	top:10px;
 	opacity:0;
-	color:#ec0000;
+	color:#ffaa05;
 	transition:all 500ms ease;
 	-moz-transition:all 500ms ease;
 	-webkit-transition:all 500ms ease;
@@ -800,7 +800,7 @@ ul li {
 }
 
 .main-menu .navigation > li > ul > li:hover > a{
-	color:#ec0000;
+	color:#ffaa05;
 	padding-left:30px;
 }
 
@@ -878,7 +878,7 @@ ul li {
 }
 
 .main-menu .navigation > li > ul > li > ul > li:hover > a{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .main-menu .navigation > li > ul > li > ul > li > a:before{
@@ -887,7 +887,7 @@ ul li {
 	left:10px;
 	top:8px;
 	opacity:0;
-	color:#ec0000;
+	color:#ffaa05;
 	transition:all 500ms ease;
 	-moz-transition:all 500ms ease;
 	-webkit-transition:all 500ms ease;
@@ -900,7 +900,7 @@ ul li {
 }
 
 .main-menu .navigation > li > ul > li > ul > li:hover > a{
-	color:#ec0000;
+	color:#ffaa05;
 	padding-left:30px;
 }
 
@@ -1094,7 +1094,7 @@ ul li {
 }
 
 .ft3-header-top-three .ft3-top-left .top-list li a:hover{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .ft3-header-top-three .ft3-top-right{
@@ -1457,7 +1457,7 @@ ul li {
 	position:relative;
 	padding:40px 40px;
 	display:inline-block;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-main-slider .phone-box .box-inner .content{
@@ -1596,7 +1596,7 @@ ul li {
 	top:0px;
 	bottom:0px;
 	width:150%;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-tracking-section .featured-column .feature-block:first-child .inner-box::before{
@@ -1606,7 +1606,7 @@ ul li {
 	top:0px;
 	bottom:0px;
 	width:2px;
-	border-right:2px solid #b00000;
+	border-right:2px solid #cc8800;
 }
 
 .feature-block{
@@ -1690,7 +1690,7 @@ ul li {
 	bottom:20px;
 	width:60px;
 	border-radius:4px;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-welcome-section .image-column .image img{
@@ -1708,7 +1708,7 @@ ul li {
 	border-radius:5px;
 	background-color:#ffffff;
 	padding:30px 30px 30px 25px;
-	border-right:5px solid #ec0000;
+	border-right:5px solid #ffaa05;
 	box-shadow:0px 0px 15px rgba(0,0,0,0.10);
 }
 
@@ -1733,7 +1733,7 @@ ul li {
 	left:0px;
 	top:5px;
 	line-height:1em;
-	color:#ec0000;
+	color:#ffaa05;
 	font-size:50px;
 	font-family: "flaticon";
 }
@@ -1766,7 +1766,7 @@ ul li {
 	left:0px;
 	top:3px;
 	line-height:1em;
-	color:#ec0000;
+	color:#ffaa05;
 	font-family: "flaticon";
 }
 
@@ -1823,7 +1823,7 @@ ul li {
 
 .ft1-services-section .owl-dots .owl-dot:hover,
 .ft1-services-section .owl-dots .owl-dot.active{
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-services-section .owl-carousel .owl-stage-outer{
@@ -1879,7 +1879,7 @@ ul li {
 	right:-15px;
 	bottom:-15px;
 	border-radius:50%;
-	border:2px dashed #ec0000;
+	border:2px dashed #ffaa05;
 }
 
 .ft1-service-block .inner-box .content{
@@ -1903,7 +1903,7 @@ ul li {
 }
 
 .ft1-service-block .inner-box h4 a:hover{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .ft1-service-block .inner-box .text{
@@ -2035,7 +2035,7 @@ ul li {
 	position:relative;
 	width:172px;
 	height:180px;
-	color:#ec0000;
+	color:#ffaa05;
 	font-size:50px;
 	line-height:180px;
 	z-index:1;
@@ -2107,7 +2107,7 @@ ul li {
 
 .ft1-track-tabs .tab-btns .tab-btn:hover,
 .ft1-track-tabs .tab-btns .tab-btn.active-btn{
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-track-tabs .tabs-content{
@@ -2187,7 +2187,7 @@ ul li {
 .ft1-default-form input[type="password"]:focus,
 .ft1-default-form select:focus,
 .ft1-default-form textarea:focus{
-	border-color:#ec0000;
+	border-color:#ffaa05;
 }
 
 .ft1-default-form .submit-btn{
@@ -2208,7 +2208,7 @@ ul li {
 }
 
 .ft1-default-form .submit-btn:hover{
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 /* CheckBox */
@@ -2295,7 +2295,7 @@ ul li {
 }
 
 .ft1-default-form .check-box input[type="checkbox"]:checked + label:before{
-	border: 8px solid #ec0000;
+	border: 8px solid #ffaa05;
     background: #ffffff;
 }
 
@@ -2326,7 +2326,7 @@ ul li {
 	right:0px;
 	bottom:0px;
 	opacity:0.70;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-tracking-section-two .career-column h4{
@@ -2411,7 +2411,7 @@ ul li {
     -ms-transform: scale(-1) rotate(180deg);
     -o-transform: scale(-1) rotate(180deg);
     transform: scale(-1) rotate(180deg);
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-feature-block-two .inner-box h6{
@@ -2491,7 +2491,7 @@ ul li {
 	right:0px;
 	bottom:0px;
 	opacity:0;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 	transition: all 600ms ease;
     -moz-transition: all 600ms ease;
     -webkit-transition: all 600ms ease;
@@ -2621,7 +2621,7 @@ ul li {
 .ft1-testimonial-section{
 	position:relative;
 	padding:100px 0px 100px;
-	background-color:#fff3f3;
+	background-color:#fff7e6;
 }
 
 .ft1-testimonial-section .sec-title .text{
@@ -2654,7 +2654,7 @@ ul li {
 
 .ft1-testimonial-section .owl-dots .owl-dot:hover,
 .ft1-testimonial-section .owl-dots .owl-dot.active{
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-testimonial-block{
@@ -2678,7 +2678,7 @@ ul li {
 	right:0px;
 	bottom:0px;
 	opacity:0;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 	transition: all 600ms ease;
     -moz-transition: all 600ms ease;
     -webkit-transition: all 600ms ease;
@@ -2694,7 +2694,7 @@ ul li {
 
 .ft1-testimonial-block .inner-box .quote-icon{
 	position:relative;
-	color:#ed0f0f;
+	color:#ffaa00;
 	width:50px;
 	height:50px;
 	font-size:24px;
@@ -2702,7 +2702,7 @@ ul li {
 	border-radius:50px;
 	margin:0 auto;
 	margin-bottom:25px;
-	background-color:#fff4f4;
+	background-color:#fff7e6;
 	font-family: "flaticon";
 	transition: all 600ms ease;
     -moz-transition: all 600ms ease;
@@ -2754,7 +2754,7 @@ ul li {
 	height:70px;
 	border-radius:50px;
 	overflow:hidden;
-	border:2px solid #fff3f3;
+	border:2px solid #fff7e6;
 }
 
 .ft1-testimonial-block .inner-box .author-info h6{
@@ -2813,7 +2813,7 @@ ul li {
 .ft1-news-block .inner-box .image{
 	position:relative;
 	overflow:hidden;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-news-block .inner-box .image img{
@@ -2878,7 +2878,7 @@ ul li {
 
 .ft1-news-block .inner-box .lower-content .title{
 	position:relative;
-	color:#ec0000;
+	color:#ffaa05;
 	font-size:18px;
 	font-weight:700;
 	margin-bottom:18px;
@@ -2895,7 +2895,7 @@ ul li {
 }
 
 .ft1-news-block .inner-box .lower-content h4 a:hover{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 /*** 
@@ -2915,7 +2915,7 @@ ul li {
 	position:relative;
 	border-radius:7px;
 	padding:40px 30px 20px;
-	background-color:#ec0000;
+	background-color:#ffaa05;
 }
 
 .ft1-location-section .title-box{
@@ -2940,7 +2940,7 @@ ul li {
 	top:0px;
 	bottom:0px;
 	width:2px;
-	background-color:#bd0000;
+	background-color:#cc8800;
 }
 
 .ft1-location-section .column:last-child::before{
@@ -2977,7 +2977,7 @@ ul li {
 	line-height:35px;
 	border-radius:50px;
 	display:inline-block;
-	background-color:#bd0000;
+	background-color:#cc8800;
 	font-family: "flaticon";
 }
 
@@ -3051,7 +3051,7 @@ ul li {
 }
 
 .ft1-main-footer .logo-widget .social-box li a:hover{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .ft1-main-footer .footer-widget h5{
@@ -3100,7 +3100,7 @@ ul li {
 }
 
 .list-link li a:hover{
-	color:#ec0000;
+	color:#ffaa05;
 	margin-left:10px;
 	text-decoration:underline;
 }
@@ -3202,12 +3202,12 @@ ul li {
 	-webkit-transition:all 500ms ease;
 	-ms-transition:all 500ms ease;
 	-o-transition:all 500ms ease;
-	background-color: #ec0000;
+	background-color: #ffaa05;
 }
 
 .ft1-main-footer .email-box .form-group button:hover{
 	background-color:#ffffff;
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .ft1-main-footer .footer-bottom{
@@ -3224,7 +3224,7 @@ ul li {
 }
 
 .ft1-main-footer .footer-bottom .copyright .icon{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 .ft1-main-footer .footer-bottom .copyright a{
@@ -3284,7 +3284,7 @@ ul li {
 }
 
 .newsletter-widget .social-box li a:hover{
-	color:#ec0000;
+	color:#ffaa05;
 }
 
 
