--- a/public/assets/scss/_template.scss
+++ b/public/assets/scss/_template.scss
@@ -9,7 +9,7 @@ $heading: 'Poppins';
 Color Code
 ===========*/
 $body-color: #888888;
-$base-color: #ea1e00;
+$base-color: #ffaa05;
 $base-color-2: #000d51;
 $base-color-3: #4ab9cf;
 $color-2: #00044b;
